import SANtricity-SMcli 0.02 from CPAN
git-cpan-module:   SANtricity-SMcli
git-cpan-version:  0.02
git-cpan-authorid: RJB
git-cpan-file:     authors/id/R/RJ/RJB/SMcli/SANtricity-SMcli-0.02.tar.gz

--- a/README
+++ b/README
@@ -1,5 +1,5 @@
-SMcli version 0.01
-==================
+SANtricity::SMcli version 0.02
+==============================
 
 A simple perl interface to Engenio's SANtricity CLI to enable the monitoring
 and management of SAN devices. The following methods are currently provided:
